objects/SkillRequirement.object
<CustomObject>
    <fields>
        <fullName>Service_Resource_RelatedList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Skill Requirements</relationshipLabel>
        <relationshipName>Skill_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Skill Requirements</relationshipLabel>
        <relationshipName>Skill_Requirements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order_Line_Item_RelatedList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Line Item</label>
        <referenceTo>WorkOrderLineItem</referenceTo>
        <relationshipLabel>Skill Requirements</relationshipLabel>
        <relationshipName>Skill_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order_RelatedList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Skill Requirements</relationshipLabel>
        <relationshipName>Skill_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Type_RelatedList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Type</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Skill Requirements</relationshipLabel>
        <relationshipName>Skill_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>